main/default/objects/CyberCoveragesTemp__c/CyberCoveragesTemp__c.object-meta.xml
<CustomObject>
    <label>Cyber Coverages Temp Data</label>
    <nameField>
        <displayFormat>Temp - {0000000}</displayFormat>
        <label>Cyber Coverages Temp Data</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CyberCoveragesTemp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>