main/default/objects/CyberCoveragesTemp__c/fields/BIandExtraExpensesNP__c.field-meta.xml
<CustomField>
    <fullName>BIandExtraExpensesNP__c</fullName>
    <label>BIandExtraExpenses-NonProratedPremium</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>