main/default/objects/CyberCoveragesTemp__c/fields/BIandExtraExpensesQP__c.field-meta.xml
<CustomField>
    <fullName>BIandExtraExpensesQP__c</fullName>
    <label>BIandExtraExpensesQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>