main/default/objects/CyberCoveragesTemp__c/fields/CyberCrimeNP__c.field-meta.xml
<CustomField>
    <fullName>CyberCrimeNP__c</fullName>
    <label>CyberCrimeNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>