main/default/objects/CyberCoveragesTemp__c/fields/CyberCrimeQP__c.field-meta.xml
<CustomField>
    <fullName>CyberCrimeQP__c</fullName>
    <label>CyberCrimeQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>