main/default/objects/CyberCoveragesTemp__c/fields/DataBreachLiabilityNP__c.field-meta.xml
<CustomField>
    <fullName>DataBreachLiabilityNP__c</fullName>
    <label>DataBreachLiabilityNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>