main/default/objects/CyberCoveragesTemp__c/fields/DataBreachLiabilityQP__c.field-meta.xml
<CustomField>
    <fullName>DataBreachLiabilityQP__c</fullName>
    <label>DataBreachLiabilityQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>