main/default/objects/CyberCoveragesTemp__c/fields/FundsTransferNP__c.field-meta.xml
<CustomField>
    <fullName>FundsTransferNP__c</fullName>
    <label>FundsTransferNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>