main/default/objects/CyberCoveragesTemp__c/fields/FundsTransferQP__c.field-meta.xml
<CustomField>
    <fullName>FundsTransferQP__c</fullName>
    <label>FundsTransferQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>