main/default/objects/CyberCoveragesTemp__c/fields/InsuredSystemFailureNP__c.field-meta.xml
<CustomField>
    <fullName>InsuredSystemFailureNP__c</fullName>
    <label>InsuredSystemFailureNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>