main/default/objects/CyberCoveragesTemp__c/fields/InsuredSystemFailureQP__c.field-meta.xml
<CustomField>
    <fullName>InsuredSystemFailureQP__c</fullName>
    <label>InsuredSystemFailureQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>