main/default/objects/CyberCoveragesTemp__c/fields/InvoiceManipulationNP__c.field-meta.xml
<CustomField>
    <fullName>InvoiceManipulationNP__c</fullName>
    <label>InvoiceManipulationNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>