main/default/objects/CyberCoveragesTemp__c/fields/InvoiceManipulationQP__c.field-meta.xml
<CustomField>
    <fullName>InvoiceManipulationQP__c</fullName>
    <label>InvoiceManipulationQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>