main/default/objects/CyberCoveragesTemp__c/fields/OutsourceSecurityFailureNP__c.field-meta.xml
<CustomField>
    <fullName>OutsourceSecurityFailureNP__c</fullName>
    <label>OutsourceSecurityFailureNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>