main/default/objects/CyberCoveragesTemp__c/fields/OutsourceSecurityFailureQP__c.field-meta.xml
<CustomField>
    <fullName>OutsourceSecurityFailureQP__c</fullName>
    <label>OutsourceSecurityFailureQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>