main/default/objects/CyberCoveragesTemp__c/fields/OutsourceSystemFailureNP__c.field-meta.xml
<CustomField>
    <fullName>OutsourceSystemFailureNP__c</fullName>
    <label>OutsourceSystemFailureNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>