main/default/objects/CyberCoveragesTemp__c/fields/OutsourceSystemFailureQP__c.field-meta.xml
<CustomField>
    <fullName>OutsourceSystemFailureQP__c</fullName>
    <label>OutsourceSystemFailureQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>