main/default/objects/CyberCoveragesTemp__c/fields/PCIFinesAndAssessmentNP__c.field-meta.xml
<CustomField>
    <fullName>PCIFinesAndAssessmentNP__c</fullName>
    <label>PCIFinesAndAssessmentNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>