main/default/objects/CyberCoveragesTemp__c/fields/PCIFinesAndAssessmentQP__c.field-meta.xml
<CustomField>
    <fullName>PCIFinesAndAssessmentQP__c</fullName>
    <label>PCIFinesAndAssessmentQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>