main/default/objects/CyberCoveragesTemp__c/fields/Post_Calc_Export__c.field-meta.xml
<CustomField>
    <fullName>Post_Calc_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Calc Export</label>
    <type>Checkbox</type>
</CustomField>