main/default/objects/CyberCoveragesTemp__c/fields/Pre_Calc_Export__c.field-meta.xml
<CustomField>
    <fullName>Pre_Calc_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Calc Export</label>
    <type>Checkbox</type>
</CustomField>