main/default/objects/CyberCoveragesTemp__c/fields/ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ReferenceId__c</fullName>
    <label>ReferenceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>