main/default/objects/CyberCoveragesTemp__c/fields/RegDefenceAndPenaltiesNP__c.field-meta.xml
<CustomField>
    <fullName>RegDefenceAndPenaltiesNP__c</fullName>
    <label>RegDefenceAndPenaltiesNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>