main/default/objects/CyberCoveragesTemp__c/fields/RegDefenceAndPenaltiesQP__c.field-meta.xml
<CustomField>
    <fullName>RegDefenceAndPenaltiesQP__c</fullName>
    <label>RegDefenceAndPenaltiesQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>