main/default/objects/CyberCoveragesTemp__c/fields/SocialEngineeringNP__c.field-meta.xml
<CustomField>
    <fullName>SocialEngineeringNP__c</fullName>
    <label>SocialEngineeringNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>