main/default/objects/CyberCoveragesTemp__c/fields/SocialEngineeringQP__c.field-meta.xml
<CustomField>
    <fullName>SocialEngineeringQP__c</fullName>
    <label>SocialEngineeringQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>