main/default/objects/CyberCoveragesTemp__c/fields/TelecomFraudNP__c.field-meta.xml
<CustomField>
    <fullName>TelecomFraudNP__c</fullName>
    <label>TelecomFraudNP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>