main/default/objects/CyberCoveragesTemp__c/fields/TelecomFraudQP__c.field-meta.xml
<CustomField>
    <fullName>TelecomFraudQP__c</fullName>
    <label>TelecomFraudQP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>